libqsim/include/libqsim/simulator.h

/* Structs matching the Rust FFI repr(C) types */

typedef struct {
    const char **files;
    size_t file_count;
    const char **sources;
    size_t source_count;
    const char **library_paths;    /* -y library directories for automatic module lookup */
    size_t library_path_count;
} qsim_compile_input_t;
typedef struct {
    int success;
    void **units;
    size_t unit_count;
    qsim_diagnostic_t *diagnostics;
    size_t diag_count;
} qsim_compile_result_t;
typedef struct {
    int success;
    uint64_t ended_at;
    uint32_t final_delta;
    const char *stop_reason;
} qsim_sim_result_t;
/* Top-level API */
void qsim_init(void);
void qsim_shutdown(void);
qsim_compile_result_t *qsim_compile(const qsim_compile_input_t *input);
void qsim_compile_result_free(qsim_compile_result_t *result);
qsim_sim_result_t *qsim_sim_run(void *session, uint64_t until_time);
void qsim_sim_result_free(qsim_sim_result_t *result);